update ArrivedContainer processStatus not default.